# Light-BlueTTS

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark_trt.py  hebrew_inference_helper.py  pyproject.toml  run_onnx_inference.py  test_gpu_onnx.py
examples/: app.py  basic.py
scripts/: benchmark_trt.py  create_tensorrt.py  utils.py
src/lightblue_onnx/: __init__.py  _vocab.py
training/: README.md  combine_datasets.py  compute_latent_stats.py  datasets.example.json  pyproject.toml
training/data/: text2latent_dataset.py  text_vocab.py  tokenizer.py
training/docs/: overview.md  stage2_text_to_latent.md  stage3_duration_predictor.md
training/models/: utils.py
training/models/text2latent/: dp_network.py  duration_predictor.py  reference_encoder.py  text_encoder.py  vf_estimator.py
training/src/: train_autoencoder.py  train_duration_predictor.py  train_text_to_latent.py
voices/: female1.json  male1.json
