[project]
name = "lightblue-onnx"
version = "0.1.0"
description = "Hebrew Text-to-Speech inference using ONNX and TensorRT"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "onnxruntime",
    "soundfile",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu",
]

tensorrt = [
    "tensorrt",
    "torch>=2.1.0",
]
export = [
    "onnx>=1.17.0",
    "torch>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

dev = [
    "ruff",
]