[project]
name = "lightblue-training"
version = "0.1.0"
description = "LightBlue TTS training"
requires-python = ">=3.13, <3.14"
dependencies = [
    "numpy",
    "soundfile",
    "pandas",
    "tqdm",
    "tensorboard",
]

[project.optional-dependencies]
cu124 = ["torch>=2.1.0", "torchaudio>=2.1.0"]
cu128 = ["torch>=2.1.0", "torchaudio>=2.1.0"]

[tool.uv]
package = false
conflicts = [
    [
        { extra = "cu124" },
        { extra = "cu128" },
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
